# F_Brain

./: .env  .gitlab-ci.yml  README.md  docker-compose.yml  grafana.ini
.gitHub/workflows/: deploy.yml
.github/workflows/: deploy.yml
client/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
client/src/: App.jsx
client/src/components/: Navbar.css  Navbar.jsx
client/src/pages/: AddMovie.css  AddMovie.jsx  Home.css  Home.jsx  LastMovies.jsx
client/src/styles/: animations.css
monitoring/grafana/: Dockerfile
monitoring/promotheus/: Dockerfile
proxy/: Dockerfile  default.conf  nginx.conf
server/: dockerfile  manage.py  pyproject.toml  requirements.txt
server/app_movies/: models.py  serializers.py  urls.py  views.py
server/app_movies/migrations/: 0001_initial.py  0002_remove_movie_trailer.py
server/backend/: settings.py
server/server_config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
