[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    { name = "carla242", email = "njohcarla26@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"

dependencies = [
    "django>=5.2.1,<6.0.0",
    "celery>=5.5.2,<6.0.0",
    "django-prometheus>=2.3.1,<3.0.0",
    "django-celery-results>=2.6.0,<3.0.0",
    "django-cors-headers>=4.3.1,<5.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"