[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["carla242 <njohcarla26@gmail.com>"]
readme = "README.md"
packages = [{ include = "server_config" }]  # ← adapte si ton app Django s'appelle différemment

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.1"
celery = "^5.5.2"
django-prometheus = "^2.3.1"
django-celery-results = "^2.6.0"
django-cors-headers = "^4.3.1"
django-celery-beat = "^2.6.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
